# SFMLGame

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: config.hpp  utilities.hpp
media/textures/red_guy/: SpriteSheet.xcf
scripts/: build.sh  test.sh
src/: CMakeLists.txt  config.cpp  main.cpp  utilities.cpp
test/: CMakeLists.txt
test/src/: test_config.cpp  test_utilities.cpp
